# battery_up

./: .gitignore  AGENTS.md  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
crates/battery-up-cli/: Cargo.toml
crates/battery-up-cli/src/: main.rs
crates/battery-up-core/: Cargo.toml
crates/battery-up-core/src/: lib.rs
crates/battery-up-cosmic-applet/: Cargo.toml
crates/battery-up-cosmic-applet/src/: main.rs
data/applications/: dev.lluz.BatteryUpApplet.desktop
src/: lib.rs  main.rs
