[workspace]
members = [
  "crates/battery-up-cli",
  "crates/battery-up-core",
  "crates/battery-up-cosmic-applet",
]
default-members = ["crates/battery-up-cli"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
license = "MIT"

[profile.release_cli]
inherits = "release"
opt-level = "z"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release_applet]
inherits = "release"
opt-level = 2
lto = false
codegen-units = 16
panic = "abort"
strip = "debuginfo"
