[package]
name = "battery-up-cosmic-applet"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "COSMIC panel applet for battery-up."

[dependencies]
battery-up-core = { path = "../battery-up-core" }
cosmic = { package = "libcosmic", git = "https://github.com/pop-os/libcosmic", default-features = false, features = ["applet"] }

[[bin]]
name = "cosmic-applet-battery-up"
path = "src/main.rs"
